[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/art/robber.png" type="Texture" id=2]
[ext_resource path="res://Components/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="AnimationNodeAnimation" id=1]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "IdleDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=5]
blend_point_0/node = SubResource( 1 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 2 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 3 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 4 )
blend_point_3/pos = Vector2( 0, 1 )

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "WalkUp"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "WalkRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=10]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 7 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 8 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 9 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachine" id=12]
states/Idle/node = SubResource( 5 )
states/Idle/position = Vector2( 419, 69 )
states/Walk/node = SubResource( 10 )
states/Walk/position = Vector2( 579, 69 )
transitions = [ "Idle", "Walk", SubResource( 11 ), "Walk", "Idle", SubResource( 24 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[sub_resource type="Animation" id=14]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=15]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=17]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=19]
resource_name = "WalkDown"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 9, 13 ]
}

[sub_resource type="Animation" id=20]
resource_name = "WalkLeft"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 8, 12 ]
}

[sub_resource type="Animation" id=21]
resource_name = "WalkRight"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 10, 14 ]
}

[sub_resource type="Animation" id=22]
resource_name = "WalkUp"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 11, 15 ]
}

[sub_resource type="CapsuleShape2D" id=23]
radius = 5.0
height = 4.0

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 3.5, 8 )

[sub_resource type="CircleShape2D" id=26]
radius = 22.3607

[node name="Player" type="KinematicBody2D"]
position = Vector2( 43, 44 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 14 )
anims/IdleLeft = SubResource( 15 )
anims/IdleRight = SubResource( 16 )
anims/IdleUp = SubResource( 17 )
anims/RESET = SubResource( 18 )
anims/WalkDown = SubResource( 19 )
anims/WalkLeft = SubResource( 20 )
anims/WalkRight = SubResource( 21 )
anims/WalkUp = SubResource( 22 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
vframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1, 1.16 )
shape = SubResource( 23 )

[node name="Dash" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 1
health = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 25 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 26 )

[connection signal="timeout" from="Dash" to="." method="_on_Dash_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
